; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_device_enable_stencil_test.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_device_enable_stencil_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_STENCIL_TEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @device_enable_stencil_test(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @GL_STENCIL_TEST, align 4
  %9 = call i32 @gl_enable(i32 %8)
  br label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @GL_STENCIL_TEST, align 4
  %12 = call i32 @gl_disable(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @UNUSED_PARAMETER(i32* %14)
  ret void
}

declare dso_local i32 @gl_enable(i32) #1

declare dso_local i32 @gl_disable(i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
